# lighter/models/__init__.py
@@ -49,6 +49,7 @@ from lighter.models.funding import Funding
 from lighter.models.funding_rate import FundingRate
 from lighter.models.funding_rates import FundingRates
 from lighter.models.fundings import Fundings
+from lighter.models.has_referee_code import HasRefereeCode
 from lighter.models.l1_metadata import L1Metadata
 from lighter.models.l1_provider_info import L1ProviderInfo
 from lighter.models.liq_trade import LiqTrade
@@ -72,12 +73,14 @@ from lighter.models.position_fundings import PositionFundings
 from lighter.models.price_level import PriceLevel
 from lighter.models.public_pool import PublicPool
 from lighter.models.public_pool_info import PublicPoolInfo
+from lighter.models.public_pool_metadata import PublicPoolMetadata
 from lighter.models.public_pool_share import PublicPoolShare
 from lighter.models.public_pools import PublicPools
 from lighter.models.referral_point_entry import ReferralPointEntry
 from lighter.models.referral_points import ReferralPoints
 from lighter.models.req_export_data import ReqExportData
 from lighter.models.req_get_account import ReqGetAccount
+from lighter.models.req_get_account_active_orders import ReqGetAccountActiveOrders
 from lighter.models.req_get_account_api_keys import ReqGetAccountApiKeys
 from lighter.models.req_get_account_by_l1_address import ReqGetAccountByL1Address
 from lighter.models.req_get_account_inactive_orders import ReqGetAccountInactiveOrders
@@ -102,6 +105,7 @@ from lighter.models.req_get_order_book_orders import ReqGetOrderBookOrders
 from lighter.models.req_get_order_books import ReqGetOrderBooks
 from lighter.models.req_get_position_funding import ReqGetPositionFunding
 from lighter.models.req_get_public_pools import ReqGetPublicPools
+from lighter.models.req_get_public_pools_metadata import ReqGetPublicPoolsMetadata
 from lighter.models.req_get_range_with_cursor import ReqGetRangeWithCursor
 from lighter.models.req_get_range_with_index import ReqGetRangeWithIndex
 from lighter.models.req_get_range_with_index_sortable import ReqGetRangeWithIndexSortable
@@ -112,14 +116,17 @@ from lighter.models.req_get_transfer_fee_info import ReqGetTransferFeeInfo
 from lighter.models.req_get_transfer_history import ReqGetTransferHistory
 from lighter.models.req_get_tx import ReqGetTx
 from lighter.models.req_get_withdraw_history import ReqGetWithdrawHistory
+from lighter.models.req_has_referee_by_l1_address import ReqHasRefereeByL1Address
 from lighter.models.resp_change_account_tier import RespChangeAccountTier
 from lighter.models.resp_get_fast_bridge_info import RespGetFastBridgeInfo
+from lighter.models.resp_public_pools_metadata import RespPublicPoolsMetadata
 from lighter.models.resp_send_tx import RespSendTx
 from lighter.models.resp_send_tx_batch import RespSendTxBatch
 from lighter.models.resp_withdrawal_delay import RespWithdrawalDelay
 from lighter.models.result_code import ResultCode
 from lighter.models.risk_info import RiskInfo
 from lighter.models.risk_parameters import RiskParameters
+from lighter.models.share_price import SharePrice
 from lighter.models.simple_order import SimpleOrder
 from lighter.models.status import Status
 from lighter.models.sub_accounts import SubAccounts
